--- a/src/main/resources/assets/ykkz000s-backpack/lang/en_us.json
+++ b/src/main/resources/assets/ykkz000s-backpack/lang/en_us.json
@@ -1,5 +1,6 @@
 {
-  "category.ykkz000s-backpack.backpack": "Ykkz000's Backpack",
+  "key.category.ykkz000s-backpack.backpack": "Ykkz000's Backpack",
   "key.ykkz000s-backpack.open_backpack": "Open Backpack",
+  "key.ykkz000s-backpack.pack_backpack": "Pack Backpack",
   "title.container.backpack": "Backpack"
 }
